--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*
 Theme Name: Imoptimal
-Theme URI: https://github.com/Imoptimal/imoptimal-theme
+Theme URI: https://imoptimal.com/portfolio/imoptimal-wordpress-theme/
 Author: Ivan Maljukanović @imoptimal
 Author URI: imoptimal.com
 Description: Starter theme, with an option to enable users to build their whole website with widgets (option available inside of admin menu, at Appearance/Customize). Best if used with Pagebuilder by Siteorigin plugin, and its widgets bundle. Intended for technically advanced users that build their own websites or websites for others, as a tool to make this process more efficient. IMPORTANT: CSS knowledge mandatory in order to use this theme to its fullest potential. It provides widget areas in these sections: header, footer, sidebar, homepage content, page content, 404 page, and shop page (if woocommerce plugin is active). All of the mentioned areas are available to the user inside of the Customizer widget area also, except the 404 page widget (which can be edited only through wp-admin widgets area).
-Version: 1.4.2
+Version: 1.4.3
 License: GNU General Public License v3 or later
 License URI: https://www.gnu.org/licenses/gpl-3.0.en.html
 Text Domain: imoptimal
@@ -77,6 +77,12 @@ textarea:focus,
 select:hover,
 select:focus {
     border: solid 5px #f4c951;
+}
+
+ul {
+    list-style: none;
+    padding-left: 10px;
+    text-align: left;
 }
 
 .imothm-container {
@@ -177,11 +183,6 @@ select:focus {
     -webkit-box-shadow: 10px 10px 10px #efedf5;
     box-shadow: 10px 10px 10px #efedf5;
     z-index: 10;
-}
-
-.imothm-container .site-header ul {
-    text-align: left;
-    list-style: none;
 }
 
 .imothm-container .site-header li {
@@ -339,11 +340,6 @@ select:focus {
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
-}
-
-.imothm-container .post,
-.imothm-container .full-post {
-    border-bottom: solid 2px #f4c951;
 }
 
 .imothm-container .entry-content {
@@ -724,6 +720,11 @@ select:focus {
         -ms-flex-preferred-size: 100%;
         flex-basis: 100%;
         max-width: 100%; 
+    }
+
+    .imothm-container .post,
+    .imothm-container .full-post {
+        border-bottom: solid 2px #f4c951;
     }
 }
 
